raiseitnow/force-app/main/default/objects/Bug_Response__c/Bug_Response__c.object-meta.xml
<CustomObject>
    <label>Bug Response</label>
    <nameField>
        <label>Bug Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bug Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>