raiseitnow/force-app/main/default/objects/Bug_Response__c/fields/Azure_Response_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Azure_Response_File_Id__c</fullName>
    <label>Azure Response File Id</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>