raiseitnow/force-app/main/default/objects/Bug_Response__c/fields/Jira_Response__c.field-meta.xml
<CustomField>
    <fullName>Jira_Response__c</fullName>
    <label>Jira Response</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>