raiseitnow/force-app/main/default/objects/Bug_Response__c/fields/ServiceNow_Response__c.field-meta.xml
<CustomField>
    <fullName>ServiceNow_Response__c</fullName>
    <label>ServiceNow Response</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>